# to-vpn

./: .gitignore  CHANGELOG.md  FIXES_SUMMARY.md  QUICK_FIX_NOTES.md  README.md  cache.db  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts  前端所有接口文档.md
docs/: API.md  ARCHITECTURE.md  PRIVILEGED_HELPER_DESIGN.md  PROJECT_OPTIMIZATION.md  PROJECT_REVIEW.md  TRAY_FEATURE_PLAN.md  TRAY_FILES_REFERENCE.md
src/: App.vue  glude优化点.md  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.json
src-tauri/resources/scripts/: install_helper.sh  uninstall_helper.sh
src-tauri/src/: constants.rs  error.rs  lib.rs  logging.rs  main.rs  tray.rs
src-tauri/src/helper/: manager.rs  mod.rs  status.rs
src-tauri/src/vpn/: config.rs  connect.rs  connectivity.rs  dns_leak_test.rs  mod.rs  monitor.rs  ping.rs  proxy.rs  security.rs  singbox.rs  state.rs  stats.rs
src-tauri/src/vpn/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/vpn/singbox/: mod.rs  socks.rs  tun.rs  tuns.rs
src/api/: announce.ts  auth.ts  device.ts  index.ts  invite.ts  plan.ts  server.ts  stats.ts  user.ts  vpn.ts
src/composables/: index.ts  useNotification.ts  useTauri.ts  useTheme.ts  useVpn.ts
src/constants/: index.ts  storage.ts  vpn.ts
src/router/: index.ts
src/stores/: auth.ts  i18n.ts  index.ts  logs.ts  servers.ts  settings.ts  stats.ts  vpn.ts
src/types/: announce.ts  api.ts  device.ts  (+9 more)
(+63 files in other folders)
