[package]
name = "tovpn"
version = "1.0.0"
description = "A VPN Client built with Tauri"
authors = ["ToVpn"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "blocking", "socks"] }
tauri-plugin-process = "2.3.1"
tokio = { version = "1", features = ["net"] }
tauri-plugin-http = "2.5.4"
[target.'cfg(unix)'.dependencies]
libc = "0.2"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
